--- a/pom.xml
+++ b/pom.xml
@@ -218,6 +218,13 @@
                 <version>${yokior.version}</version>
             </dependency>
 
+            <!-- 知识库模块-->
+            <dependency>
+                <groupId>com.yokior</groupId>
+                <artifactId>yokior-team</artifactId>
+                <version>${yokior.version}</version>
+            </dependency>
+
         </dependencies>
     </dependencyManagement>
 
@@ -228,6 +235,7 @@
         <module>yokior-quartz</module>
         <module>yokior-generator</module>
         <module>yokior-common</module>
+        <module>yokior-team</module>
     </modules>
     <packaging>pom</packaging>
 
