--- a/yokior-common/pom.xml
+++ b/yokior-common/pom.xml
@@ -119,6 +119,14 @@
             <artifactId>javax.servlet-api</artifactId>
         </dependency>
 
+        <!-- lombok   -->
+        <dependency>
+            <groupId>org.projectlombok</groupId>
+            <artifactId>lombok</artifactId>
+            <version>1.18.30</version>
+        </dependency>
+
+
     </dependencies>
 
 </project>
