feat(团队管理): 重构团队头像上传功能，使用新组件处理头像上传，优化头像上传逻辑，添加权限控制注解TeamAuth

--- a/yokior-framework/pom.xml
+++ b/yokior-framework/pom.xml
@@ -59,6 +59,11 @@
             <artifactId>yokior-system</artifactId>
         </dependency>
 
+        <dependency>
+            <groupId>com.yokior</groupId>
+            <artifactId>yokior-team</artifactId>
+        </dependency>
+
     </dependencies>
 
 </project>
