--- a/qa-front/package.json
+++ b/qa-front/package.json
@@ -48,6 +48,7 @@
     "js-beautify": "1.13.0",
     "js-cookie": "3.0.1",
     "jsencrypt": "3.0.0-rc.1",
+    "marked": "^4.3.0",
     "nprogress": "0.2.0",
     "qrcode": "^1.5.4",
     "quill": "2.0.2",
