feat(AI聊天): 初始化AI聊天模块，包含消息和会话实体，服务接口及数据层实现，支持聊天记录管理和会话操作

--- a/pom.xml
+++ b/pom.xml
@@ -218,11 +218,18 @@
                 <version>${yokior.version}</version>
             </dependency>
 
-            <!-- 知识库模块-->
+            <!-- 团队模块-->
             <dependency>
                 <groupId>com.yokior</groupId>
                 <artifactId>yokior-team</artifactId>
                 <version>${yokior.version}</version>
+            </dependency>
+
+            <!-- ai模块-->
+            <dependency>
+                <groupId>com.yokior</groupId>
+                <artifactId>yokior-ai</artifactId>
+                <version>1.0.0</version>
             </dependency>
 
         </dependencies>
@@ -236,6 +243,8 @@
         <module>yokior-generator</module>
         <module>yokior-common</module>
         <module>yokior-team</module>
+        <module>yokior-ai</module>
+        <module>yokior-ai</module>
     </modules>
     <packaging>pom</packaging>
 
