--- a/yokior-common/pom.xml
+++ b/yokior-common/pom.xml
@@ -132,6 +132,17 @@
             <version>5.8.18</version>
         </dependency>
 
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-configuration-processor</artifactId>
+            <optional>true</optional>
+        </dependency>
+
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-test</artifactId>
+        </dependency>
+
 
     </dependencies>
 
