feat(知识库模块): 初步实现文档管理功能前后端，包括文档上传、删除和列表展示，支持团队选择和文档状态管理

--- a/pom.xml
+++ b/pom.xml
@@ -232,6 +232,13 @@
                 <version>${yokior.version}</version>
             </dependency>
 
+             <!-- 知识模块-->
+             <dependency>
+                <groupId>com.yokior</groupId>
+                <artifactId>yokior-knowledge</artifactId>
+                <version>${yokior.version}</version>
+            </dependency>
+
         </dependencies>
     </dependencyManagement>
 
@@ -244,6 +251,7 @@
         <module>yokior-common</module>
         <module>yokior-team</module>
         <module>yokior-ai</module>
+        <module>yokior-knowledge</module>
     </modules>
     <packaging>pom</packaging>
 
