--- a/yokior-knowledge/pom.xml
+++ b/yokior-knowledge/pom.xml
@@ -16,6 +16,23 @@
             <groupId>com.yokior</groupId>
             <artifactId>yokior-common</artifactId>
         </dependency>
+        <!-- Apache Tika -->
+        <dependency>
+            <groupId>org.apache.tika</groupId>
+            <artifactId>tika-core</artifactId>
+            <version>2.6.0</version>
+        </dependency>
+        <dependency>
+            <groupId>org.apache.tika</groupId>
+            <artifactId>tika-parsers-standard-package</artifactId>
+            <version>2.6.0</version>
+        </dependency>
+        <!-- HanLP -->
+        <dependency>
+            <groupId>com.hankcs</groupId>
+            <artifactId>hanlp</artifactId>
+            <version>portable-1.7.6</version>
+        </dependency>
     </dependencies>
 
     <properties>
