feat(知识库检索): 添加知识库检索功能，新增KnowledgeQueryDTO和KnowledgeMatchVO数据传输对象，更新QaDocumentController和IQaDocumentService接口，优化QaDocumentServiceImpl实现逻辑，支持基于TF-IDF的段落匹配和得分计算

--- a/yokior-knowledge/pom.xml
+++ b/yokior-knowledge/pom.xml
@@ -33,6 +33,12 @@
             <artifactId>hanlp</artifactId>
             <version>portable-1.7.6</version>
         </dependency>
+        <!-- JSON依赖 -->
+        <dependency>
+            <groupId>org.json</groupId>
+            <artifactId>json</artifactId>
+            <version>20220320</version>
+        </dependency>
     </dependencies>
 
     <properties>
