--- a/yokior-knowledge/pom.xml
+++ b/yokior-knowledge/pom.xml
@@ -16,6 +16,10 @@
             <groupId>com.yokior</groupId>
             <artifactId>yokior-common</artifactId>
         </dependency>
+        <dependency>
+            <groupId>com.yokior</groupId>
+            <artifactId>yokior-system</artifactId>
+        </dependency>
         <!-- Apache Tika -->
         <dependency>
             <groupId>org.apache.tika</groupId>
