feat(文档管理): 更新文档列表组件，增加自动刷新功能，优化处理状态切换逻辑，调整文档上传后的状态处理，完善段落切分工具类，支持多种文档格式的忽略设置

--- a/.gitignore
+++ b/.gitignore
@@ -3,12 +3,22 @@
 *.bat
 *.sh
 
-项目开发用.md
+
 .vscode
 .cursor
 *.txt
 *.yml
 *.yaml
+*.md
+*.MD
+*.docx
+*.doc
+*.pdf
+*.pptx
+*.ppt
+
+
+!README.md
 
 .gradle
 /build/
